--- a/.godot/global_script_class_cache.cfg
+++ b/.godot/global_script_class_cache.cfg
@@ -1,7 +1,19 @@
 list=Array[Dictionary]([{
 "base": &"Resource",
+"class": &"DAMAGE",
+"icon": "",
+"language": &"GDScript",
+"path": "res://Nested Resource/damage.gd"
+}, {
+"base": &"Resource",
+"class": &"PlayerResource",
+"icon": "",
+"language": &"GDScript",
+"path": "res://Nested Resource/player_resource.gd"
+}, {
+"base": &"Resource",
 "class": &"PlayerStat",
 "icon": "",
 "language": &"GDScript",
-"path": "res://PlayerStat.gd"
+"path": "res://Simple Resource/PlayerStat.gd"
 }])
