--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -19,16 +19,16 @@ dock_filesystem_split=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://Global.gd")
-dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://")
+dock_filesystem_selected_paths=PackedStringArray("res://Nested Resource/damage.gd")
+dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://Nested Resource/")
 dock_3="Scene,Import"
 dock_4="FileSystem"
 dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://main_game.tscn")
-current_scene="res://main_game.tscn"
+open_scenes=PackedStringArray("res://Nested Resource/Main.tscn", "res://Nested Resource/Player.tscn")
+current_scene="res://Nested Resource/Main.tscn"
 center_split_offset=0
 selected_default_debugger_tab_idx=0
 selected_main_editor_idx=2
@@ -36,8 +36,8 @@ selected_bottom_panel_item=0
 
 [ScriptEditor]
 
-open_scripts=["res://Global.gd", "res://Player.gd", "res://PlayerStat.gd"]
-selected_script="res://Player.gd"
+open_scripts=["res://Nested Resource/damage.gd", "res://Global.gd", "res://Nested Resource/Player.gd", "res://Nested Resource/player_resource.gd"]
+selected_script="res://Nested Resource/Player.gd"
 open_help=["Node2D"]
 script_split_offset=52
 list_split_offset=0
