--- a/.godot/editor/script_editor_cache.cfg
+++ b/.godot/editor/script_editor_cache.cfg
@@ -1,18 +1,32 @@
-[res://Player.gd]
+[res://Global.gd]
 
 state={
 "bookmarks": PackedInt32Array(),
-"breakpoints": PackedInt32Array(15),
-"column": 43,
+"breakpoints": PackedInt32Array(),
+"column": 0,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 6,
+"row": 3,
 "scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
 
-[res://PlayerStat.gd]
+[res://Simple Resource/Player.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(15),
+"column": 21,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 9,
+"scroll_position": 0.0,
+"selection": false,
+"syntax_highlighter": "GDScript"
+}
+
+[res://Simple Resource/PlayerStat.gd]
 
 state={
 "bookmarks": PackedInt32Array(),
@@ -30,7 +44,7 @@ state={
 "syntax_highlighter": "GDScript"
 }
 
-[res://Global.gd]
+[res://Nested Resource/Player.gd]
 
 state={
 "bookmarks": PackedInt32Array(),
@@ -38,8 +52,44 @@ state={
 "column": 0,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 3,
+"row": 8,
 "scroll_position": 0.0,
 "selection": false,
+"syntax_highlighter": "GDScript"
+}
+
+[res://Nested Resource/player_resource.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 27,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 4,
+"scroll_position": 0.0,
+"selection": true,
+"selection_from_column": 12,
+"selection_from_line": 4,
+"selection_to_column": 27,
+"selection_to_line": 4,
+"syntax_highlighter": "GDScript"
+}
+
+[res://Nested Resource/damage.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 18,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 3,
+"scroll_position": 0.0,
+"selection": true,
+"selection_from_column": 12,
+"selection_from_line": 3,
+"selection_to_column": 18,
+"selection_to_line": 3,
 "syntax_highlighter": "GDScript"
 }
